--- a/frontend/src/app/settings/settings.component.css
+++ b/frontend/src/app/settings/settings.component.css
@@ -1,6 +1,6 @@
 div{
   display: flex;
-
+  padding-bottom: 2.5rem;
 }
 
 .photo-container{
